log
Fri, May 16, 2025  6:49:20 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  6:50:02 PM: 
 tests:  0|5
total_score: 0/70
67eba21
Sat, May 17, 2025 11:21:20 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|5
total_score: 0/70
ceda21e
